# LFT

./: .gitignore  CMakeLists.txt  Milestone1.txt  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
cmake/: FindMsquic.cmake
include/: udp_socket.h
include/lft/: constants.h  format.h
include/net/: mdns.h
include/transfer/: quic_client.h  quic_server.h  quic_transfer.h  sha256.h
scripts/: generate_dev_certs.sh
src/: CMakeLists.txt  main.cpp
src/common/: format.cpp
src/gui/: CMakeLists.txt  format.cpp  format.h  gui_constants.h  home_page.cpp  home_page.h  main.cpp  main_window.cpp  main_window.h  recv_page.cpp  recv_page.h  recv_worker.cpp  recv_worker.h  send_page.cpp  send_page.h  send_worker.cpp  send_worker.h
src/net/: mdns.cpp  udp_socket.cpp
src/transfer/: CMakeLists.txt  quic_client.cpp  quic_send_buffer.h  quic_server.cpp  quic_transfer.cpp  sha256.cpp
tests/: CMakeLists.txt  checkpoint1_test.cpp  msquic_smoke.cpp  quic_client_connect_test.cpp  quic_echo_test.cpp  quic_file_edgecases_test.cpp  quic_file_transfer_test.cpp  quic_server_start_test.cpp  transfer_protocol_test.cpp
tests/e2e/: cli_test.cpp  subprocess.h
tests/integration/: mdns_discovery_test.cpp  mdns_transfer_test.cpp  quic_test_access.cpp  quic_test_access.h  quic_test_fixture.h  quic_transfer_edgecases_test.cpp  quic_transfer_test.cpp
tests/legacy/: checkpoint1_test.cpp
tests/smoke/: msquic_smoke_test.cpp
tests/unit/: transfer_protocol_test.cpp
website/: index.html  style.css
